refactor 노란줄 변경